nuevo footer en index.html

--- a/index.html
+++ b/index.html
@@ -50,5 +50,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt rerum laudantium quaerat suscipit voluptate? Numquam aliquid recusandae nemo, necessitatibus qui quae. Vero fugiat eos eveniet numquam, voluptates corporis iste inventore.</p>
         </article>
     </section>
+
+    <footer>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus corporis facilis et error exercitationem. Doloremque ab deleniti ullam quis explicabo doloribus sint ipsum autem minima repellat nulla cumque, veniam non.</p>
+    </footer>
 </body>
 </html>
