modificacion en el index

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt rerum laudantium quaerat suscipit voluptate? Numquam aliquid recusandae nemo, necessitatibus qui quae. Vero fugiat eos eveniet numquam, voluptates corporis iste inventore.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt rerum laudantium quaerat suscipit voluptate? Numquam aliquid recusandae nemo, necessitatibus qui quae. Vero fugiat eos eveniet numquam, voluptates corporis iste inventore.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt rerum laudantium quaerat suscipit voluptate? Numquam aliquid recusandae nemo, necessitatibus qui quae. Vero fugiat eos eveniet numquam, voluptates corporis iste inventore.</p>
+            <p>correo@correo.com</p>
         </article>
     </section>
 
