cambio en el titulo del index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="content__title">
-        <h1>NUEVO TÍTUTO EN RAMA "STYLE"</h1>
+        <h1>CLASE 15 - GITHUB</h1>
     </div>
 
     <header>
