--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">Inicio</a>
+                    <a href="index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="">Nosotros</a>
+                    <a href="nosotros.html">Nosotros</a>
                 </li>
                 <li>
                     <a href="productos.html">Productos</a>
                 </li>
                 <li>
-                    <a href="">Servicios</a>
+                    <a href="servicios.html">Servicios</a>
                 </li>
                 <li>
-                    <a href="">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
