nueva carpeta paginas y cambio en productos

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                     <a href="index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="nosotros.html">Nosotros</a>
+                    <a href="paginas/nosotros.html">Nosotros</a>
                 </li>
                 <li>
-                    <a href="productos.html">Productos</a>
+                    <a href="paginas/productos.html">Productos</a>
                 </li>
                 <li>
-                    <a href="servicios.html">Servicios</a>
+                    <a href="paginas/servicios.html">Servicios</a>
                 </li>
                 <li>
-                    <a href="contacto.html">Contacto</a>
+                    <a href="paginas/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -48,16 +48,6 @@
         <article>
             <h2>SERVICIOS</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt rerum laudantium quaerat suscipit voluptate? Numquam aliquid recusandae nemo, necessitatibus qui quae. Vero fugiat eos eveniet numquam, voluptates corporis iste inventore.</p>
-        </article>
-    </section>
-
-    <section class="contacto">
-        <article>
-            <h2>asdasdasdasdasdasdsad</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt rerum laudantium quaerat suscipit voluptate? Numquam aliquid recusandae nemo, necessitatibus qui quae. Vero fugiat eos eveniet numquam, voluptates corporis iste inventore.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt rerum laudantium quaerat suscipit voluptate? Numquam aliquid recusandae nemo, necessitatibus qui quae. Vero fugiat eos eveniet numquam, voluptates corporis iste inventore.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt rerum laudantium quaerat suscipit voluptate? Numquam aliquid recusandae nemo, necessitatibus qui quae. Vero fugiat eos eveniet numquam, voluptates corporis iste inventore.</p>
-            <p>correo@correo.com</p>
         </article>
     </section>
 
