--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -13,19 +13,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Inicio</a>
+                    <a href="../index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="">Nosotros</a>
+                    <a href="nosotros.html">Nosotros</a>
                 </li>
                 <li>
-                    <a href="">Productos</a>
+                    <a href="productos.html">Productos</a>
                 </li>
                 <li>
-                    <a href="">Servicios</a>
+                    <a href="servicios.html">Servicios</a>
                 </li>
                 <li>
-                    <a href="">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
