--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Productos</title>
+    <title>Servicios</title>
 </head>
 <body>
     <header>
