--- a/404.html
+++ b/404.html
@@ -9,6 +9,60 @@
     <!-- ICON -->
     <link rel="icon" type="image/png" href="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/288_Sass-512.png">
     <title>SASS I</title>
+
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,300;0,700;1,400&display=swap");
+        * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        }
+
+        html {
+        font-size: 62.5%;
+        font-family: "Urbanist", sans-serif;
+        }
+
+        .content__title {
+        background-color: #00ffff;
+        }
+
+        h1 {
+        color: #002c66;
+        text-align: center;
+        }
+
+        header {
+        background-color: #002c66;
+        padding: .3rem 0;
+        }
+
+        header nav {
+        width: 80%;
+        margin: 0 auto;
+        }
+
+        header nav ul {
+        display: flex;
+        justify-content: space-around;
+        }
+
+        header nav ul li {
+        list-style-type: none;
+        text-transform: uppercase;
+        font-weight: 400;
+        }
+
+        header nav ul li a {
+        text-decoration: none;
+        color: #00ffff;
+        }
+
+        footer {
+        background-color: blueviolet;
+        }
+    </style>
+
 </head>
 <body>
     <div class="content__title">
