--- a/404.html
+++ b/404.html
@@ -61,8 +61,24 @@
         footer {
         background-color: blueviolet;
         }
-    </style>
 
+        .error h1{
+            font-size: 6rem;
+            text-align: center;
+            margin: 4rem;
+            color: rgb(98, 24, 168);
+        }
+
+        .error p {
+            font-size: 2rem;
+            text-align: center;
+        }
+
+        .error p a {
+            text-decoration: none;
+            color: blueviolet;
+        }   
+    </style>
 </head>
 <body>
     <div class="content__title">
@@ -93,8 +109,8 @@
 
     <section class="error">
         <article>
-            <h2>404</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt rerum laudantium quaerat suscipit voluptate? Numquam aliquid recusandae nemo, necessitatibus qui quae. Vero fugiat eos eveniet numquam, voluptates corporis iste inventore.</p>
+            <h1>404</h1>
+            <p>Volver al <a href="index.html">inicio</a></p>
         </article>
     </section>
 
